--- a/backend/package.json
+++ b/backend/package.json
@@ -13,36 +13,37 @@
     "db:seed": "ts-node src/database/seed.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "@prisma/client": "^5.6.0",
+    "africastalking": "^0.6.1",
     "axios": "^1.6.0",
-    "node-cron": "^3.0.3",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
+    "node-cron": "^3.0.3",
+    "node-routeros": "^1.3.0",
     "qrcode": "^1.5.3",
-    "africastalking": "^0.6.1",
     "twilio": "^4.19.0",
-    "node-routeros": "^2.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.9.0",
     "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
+    "@types/node": "^20.9.0",
+    "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.5",
-    "typescript": "^5.2.2",
+    "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.1",
+    "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
-    "prisma": "^5.6.0"
+    "typescript": "^5.2.2"
   }
 }
